--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
       "type": "object",
       "title": "Example configuration",
       "properties": {
-        "languageServerExample.maxNumberOfProblems": {
+        "languageServerMyst.maxNumberOfProblems": {
           "scope": "resource",
           "type": "number",
           "default": 100,
           "description": "Controls the maximum number of problems produced by the server."
         },
-        "languageServerExample.trace.server": {
+        "languageServerMyst.trace.server": {
           "scope": "window",
           "type": "string",
           "enum": [
