--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/executablebooks/myst-lsp"
   },
   "dependencies": {
+    "markdown-it": "^13.0.1",
     "vscode-languageserver": "^7.0.0",
     "vscode-languageserver-textdocument": "^1.0.4"
   },
