--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "url": "https://github.com/executablebooks/myst-lsp"
   },
   "dependencies": {
+    "@types/js-yaml": "^4.0.5",
+    "@types/markdown-it": "^12.2.3",
+    "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
     "vscode-languageserver": "^7.0.0",
     "vscode-languageserver-textdocument": "^1.0.4"
