--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "@types/markdown-it": "^12.2.3",
     "js-yaml": "^4.1.0",
     "markdown-it": "^13.0.1",
-    "vscode-languageserver": "^7.0.0",
+    "markdown-it-front-matter": "^0.2.3",
+    "vscode-languageserver": "^8.0.2",
     "vscode-languageserver-textdocument": "^1.0.4"
   },
   "scripts": {}
