Add myst.yml config, add background analysis, add definitions

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,9 +14,11 @@ parserOptions:
   sourceType: module
 plugins:
   - "@typescript-eslint"
+  - "simple-import-sort"
 rules:
   semi: 0
   "@typescript-eslint/no-unused-vars": 0
   "@typescript-eslint/no-explicit-any": 0
   "@typescript-eslint/explicit-module-boundary-types": 0
   "@typescript-eslint/no-non-null-assertion": 0
+  "simple-import-sort/imports": "error"
