--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "markdown-it": "^13.0.1",
     "markdown-it-front-matter": "^0.2.3",
     "vscode-languageserver": "^8.0.2",
-    "vscode-languageserver-textdocument": "^1.0.4"
+    "vscode-languageserver-textdocument": "^1.0.4",
+    "vscode-uri": "^3.0.6"
   },
   "scripts": {},
   "devDependencies": {
