--- a/vscode-client/package.json
+++ b/vscode-client/package.json
@@ -3,7 +3,7 @@
   "description": "VSCode client for the Myst Language Server",
   "author": "Chris Sewell",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/executablebooks/myst-lsp"
@@ -18,5 +18,5 @@
   "engines": {
     "vscode": "^1.66.0"
   },
-  "publisher": "chrisjsewell
+  "publisher": "chrisjsewell"
 }
