--- a/package.json
+++ b/package.json
@@ -1,16 +1,39 @@
 {
   "name": "myst-lsp",
-  "description": "A Language Server Protocol provider for MyST Markdown",
+  "description": "A Language Server for MyST Markdown",
   "author": "Chris Sewell",
   "license": "MIT",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/chrisjsewell/myst-lsp"
   },
+  "publisher": "chrisjsewell",
   "main": "./vscode-client/out/extension",
-  "bin": {
-    "myst-languageserver": "./server/out/server.js"
+  "engines": {
+    "vscode": "^1.66.0"
+  },
+  "activationEvents": [
+    "onLanguage:markdown",
+    "onLanguage:myst"
+  ],
+  "contributes": {
+    "configuration": {
+      "type": "object",
+      "title": "MyST LSP configuration",
+      "properties": {}
+    },
+    "languages": [
+      {
+        "id": "myst",
+        "aliases": [
+          "MyST"
+        ],
+        "extensions": [
+          ".myst"
+        ]
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
@@ -35,28 +58,5 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "mocha": "^9.2.1",
     "typescript": "^4.8.4"
-  },
-  "engines": {
-    "vscode": "^1.66.0"
-  },
-  "activationEvents": [
-    "onLanguage:markdown",
-    "onLanguage:myst"
-  ],
-  "publisher": "chrisjsewell",
-  "contributes": {
-    "configuration": {
-      "type": "object",
-      "title": "MyST LSP configuration",
-      "properties": {}
-    },
-    "languages": [
-      {
-        "id": "myst",
-        "aliases": [
-          "MyST"
-        ]
-      }
-    ]
   }
 }
